--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "easyswoole/template",
+    "name": "ryx16/template",
     "type": "library",
     "description": "An efficient swoole framework",
     "keywords": [
